<resources>
    <string name="app_name">desain ui 2</string>
    <string name="login">HI,DINDA AMALIA</string>
    <string name="rp_1_000_000">Rp 1.000.000</string>
    <string name="saldo">Saldo Tersedia</string>
    <string name="transfer">TRANSFER</string>
    <string name="payment">PAYMENT</string>
    <string name="information">INFORMATION</string>
    <string name="e_money">E-MONEY</string>
    <string name="e_commerce">E-COMMERCE</string>
    <string name="more">MORE</string>
    <string name="transaksi_terakhir">TRANSAKSI TERAKHIR</string>
    <string name="_0088997788">0088997788</string>
    <string name="rp_3_000_000">Rp 3.000.000</string>
    <string name="aca">Aca</string>
    <string name="_0077668899">0077668899</string>
    <string name="rp1_000_000">Rp 1.000.000</string>
    <string name="amal">Amal</string>
</resources>